# cookbook

./: .gitignore  README.md
examples/browser-control/: AGENT.md  Makefile  README.md  example.py  pyproject.toml
examples/browser-control/configs/: lfm2_350m.yaml  lfm2_350m_debugging.yaml  lfm2_350m_local_full_v2.yaml  v1.yaml
examples/browser-control/scripts/: convert_to_gguf_local.py
examples/browser-control/src/browser_control/: config.py  evaluate.py  fine_tune.py  fine_tune_local.py  fine_tune_with_grpo.py  main.py  modal_infra.py  training.py
examples/car-maker-identification/: Makefile  README.md  pyproject.toml
examples/car-maker-identification/configs/: eval_lfm_1.6B.yaml  finetune_lfm_3B.yaml
examples/car-maker-identification/src/car_maker_identification/: config.py  evaluate.py  fine_tune.py  inference.py  loaders.py  modal_infra.py
examples/home-assistant/: .env.example  .gitignore  CLAUDE.md  FINDINGS.md  FINETUNE-FINDINGS.md  FLOORPLAN_PLAN.md  README.md  Team Input.md  blog1.md  index.html  package.json  pyproject.toml  vite.config.ts
examples/home-assistant/app/: agent.py  server.py  state.py
examples/home-assistant/app/tools/: __init__.py  handlers.py  schemas.py
examples/home-assistant/assets/: style.css
examples/home-assistant/benchmark/: generate_dataset.py  run.py  tasks.py
examples/home-assistant/benchmark/datasets/: compact.py  generate.py
examples/home-assistant/benchmark/datasets/sft_data_2026-03-27_13-33-25/: data.jsonl  (+1 more)
examples/home-assistant/benchmark/results/: 2026-03-20_16-12-13_LFM2.5-1.2B-Instruct-Q4_0.gguf.md  2026-03-20_16-18-07_gpt-4o-mini.md  2026-03-25_15-30-54_0.gguf.md  2026-03-25_17-31-58_0.gguf.md  2026-03-26_07-00-04_0.gguf.md  2026-03-26_07-00-12_0.gguf.md  2026-03-26_14-10-07_LFM2-350M-Q8_0.gguf.md  2026-03-26_14-20-42_LFM2.5-350M-Q8_0.gguf.md  2026-03-26_14-21-08_LFM2.5-350M-Q8_0.gguf.md  2026-03-26_14-22-41_LFM2.5-1.2B-Instruct-Q4_0.gguf.md  2026-03-26_15-42-01_LFM2-350M-q8_0.gguf.md  2026-03-27_11-25-50_LFM2-350M-q8_0.gguf.md  2026-03-27_11-26-15_LFM2-350M-q8_0.gguf.md  2026-03-27_11-26-29_LFM2-350M-q8_0.gguf.md  2026-03-27_11-26-31_LFM2-350M-q8_0.gguf.md  2026-03-27_11-30-07_gpt-4o-mini.md  2026-03-27_11-42-17_LFM2-350M-Q8_0.gguf.md  2026-03-27_11-42-22_LFM2-350M-Q8_0.gguf.md  2026-03-27_12-01-50_LFM2-350M-Q8_0.gguf.md  2026-03-27_13-07-37_LFM2-350M-Q8_0.gguf.md  2026-03-27_13-13-00_LFM2-350M-Q8_0.gguf.md  2026-03-27_16-32-55_LFM2-350M-q8_0.gguf.md  2026-03-27_17-20-27_LFM2-350M-q8_0.gguf.md  2026-03-30_15-43-00_LFM2-350M-q8_0.gguf.md  2026-03-30_16-15-42_LFM2-350M-q8_0.gguf.md  2026-03-30_18-04-47_LFM2.5-1.2B-Instruct-Q4_0.gguf.md  2026-03-30_18-09-03_LFM2.5-1.2B-Instruct-Q4_0.gguf.md  2026-03-30_18-23-25_LFM2.5-1.2B-Instruct-Q4_0.gguf.md  2026-03-31_10-30-28_LFM2.5-1.2B-Instruct-q8_0.gguf.md  results.md  summary.md
examples/home-assistant/finetune/: convert_hf_to_gguf.py  export.py  prepare_data.py  push_to_hub.py  train.py
examples/home-assistant/finetune/configs/: 1.2B.yaml  LFM2-1.2B.yaml  LFM2-350M.yaml  LFM2.5-350M.yaml
examples/home-assistant/src/: App.tsx
examples/home-assistant/src/config/: model.config.ts
examples/home-assistant/src/types/: index.ts
examples/local-coding-assistant/: .env.example  MEETING_INTELLIGENCE.md  README.md  pyproject.toml  start_model.sh
examples/local-coding-assistant/benchmark/: run.py  tasks.py  tasks_llamacpp.py
examples/local-coding-assistant/src/local_coding_assistant/: __init__.py  agent.py  config.py  context.py  main.py  server.py  tools.py
examples/local-coding-assistant/tasks/create_mvp/: plan.md  task.md
examples/meeting-intelligence-agent/: .env  .env.example  .gitignore  README.md  pyproject.toml  start_model.sh
examples/meeting-intelligence-agent/benchmark/: run.py  tasks.py
examples/meeting-intelligence-agent/benchmark/results/: summary.md
examples/meeting-intelligence-agent/data/: sample_transcript.txt  tasks.json  team_directory.json
examples/meeting-intelligence-agent/data/summaries/: sprint-planning-acme-platform-2025-07-07.md
examples/meeting-intelligence-agent/src/meeting_intelligence/: agent.py  config.py  context.py  main.py  server.py  tools.py
examples/wildfire-detection/: pyproject.toml
examples/wildfire-prevention/: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/wildfire-prevention/app/: app.py  eval_compare.py
examples/wildfire-prevention/configs/: wildfire_finetune.yaml  wildfire_finetune_modal.yaml
examples/wildfire-prevention/finetune/: convert_hf_to_gguf.py
examples/wildfire-prevention/plans/: 00_generate_data.md  01_evaluation.md  02_app.md  03_watch.md  region-based-monitoring.md
examples/wildfire-prevention/scripts/: app.py  backfill.py  check_samples.py  evaluate.py  generate_samples.py  predict.py  prepare_wildfire.py  push_dataset_to_hf.py  push_gguf_to_hf.py  quantize.py
examples/wildfire-prevention/src/wildfire_prevention/: annotator.py  db.py  evaluator.py  live.py  locations.py  regions.py  simsat.py  tiles.py
(+438 files in other folders)
