[project]
name = "meeting-intelligence"
version = "0.1.0"
description = "A local AI agent that turns meeting transcripts into action items"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]

[project.scripts]
mia = "meeting_intelligence.main:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
