[project]
name = "wildfire-detection"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "tqdm>=4.67",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wildfire_detection"]
